HBASE-2177 Add timestamping to gc logging option
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@909185 13f79535-47bb-0310-9956-ffa450edef68